--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				<span class="block h-[2px] w-full bg-primary-dark transition-all duration-300"></span>
 			</button>
 
-			<div id="navbar" class="absolute flex gap-4 bg-white shadow-md drop-shadow-md backdrop-blur-md bg-opacity-50 md:bg-opacity-100 py-4 w-full left-0 items-center flex-col top-20 md:bg-white md:w-auto md:flex md:bg-transparent md:flex-row md:top-auto md:left-auto md:gap-4 text-primary-dark font-semibold">
+			<div id="navbar" class="absolute hidden gap-4 bg-white shadow-md drop-shadow-md backdrop-blur-md bg-opacity-50 md:bg-opacity-100 py-4 w-full left-0 items-center flex-col top-20 md:bg-white md:w-auto md:flex md:bg-transparent md:flex-row md:top-auto md:left-auto md:gap-4 text-primary-dark font-semibold">
 				<a class="hover:text-primary" href="#home">Beranda</a>
 				<a class="hover:text-primary" href="#logo">Logo</a>
 				<a class="hover:text-primary" href="#representatives">Perwakilan</a>
