fix: section padding

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 
 <head>
 	<meta charset="UTF-8">
@@ -265,7 +265,7 @@
 			</div>
 		</section>
 
-		<section id="member" class="lg:pb-32 relative overflow-hidden">
+		<section id="member" class="lg:pb-32 relative overflow-hidden pt-10">
 			<div class="bg-cover bg-[url('/assets/img/sea.jpg')] bg-bottom text-transparent p-0 [background-clip:text]">
 				<h2 class="text-3xl lg:text-8xl text-center pt-8 lg:pt-16 lg:pb-8 font-bold uppercase">
 					THE IMPRESIVE CREW
@@ -341,7 +341,7 @@
 			
 		</section>
 
-		<section id="gallery" class="pb-24 lg:pb-44 relative">
+		<section id="gallery" class="pb-24 lg:pb-44 relative pt-10">
 			<div class="bg-cover bg-[url('/assets/img/sea.jpg')] bg-bottom text-transparent p-0 [background-clip:text]">
 				<h2 class="text-3xl lg:text-8xl text-center pt-8 lg:pt-16 lg:pb-8 font-bold uppercase">
 					COMMUNITY GATHERING
@@ -470,7 +470,7 @@
 		</section>
 	</main>
 
-	<section id="booklet">
+	<section id="booklet" class="pt-10">
 		<div class="relative h-full w-full">
 			<div class="absolute h-full w-full -z-10">
 				<img class="object-cover h-full w-full brightness-[.35]" src="./assets/img/deepsea.jpg" alt>
