feat: add image kopdar

--- a/index.html
+++ b/index.html
@@ -352,117 +352,328 @@
 			<div class="w-full lg:w-10/12 mx-auto p-4 md:p-0">
 				<div id="community" class="owl-carousel owl-theme">
 					<div class="item">
-						<div class="flex flex-col gap-10 pt-8">
+						<div class="w-full text-center">
+							<span class="text-lg">Banyumas</span>
+						</div>
+						<div class="flex flex-col gap-10 pt-4">
 							<div class="flex items-center">
-								<div class="bg-blue-600 md:h-32 md:w-64 w-[22rem] h-52 rounded-3xl">
+								<div class="md:h-32 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover object-right md:object-center rounded-2xl w-full h-full" src="./assets/img/kopdar/banyumas.jpg" alt>
 								</div>
 							</div>
 							<div class="flex items-center">
-								<div class="bg-blue-600 md:h-40 md:w-72 w-[22rem] h-52 rounded-3xl">
+								<div class="md:h-40 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover object-top rounded-2xl w-full h-full" src="./assets/img/kopdar/banyumas2.jpg" alt>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="item">
-						<div class="flex flex-col gap-10 pt-8">
+						<div class="w-full text-center">
+							<span class="text-lg">Bogor</span>
+						</div>
+						<div class="flex flex-col gap-10 pt-4">
 							<div class="flex items-center">
-								<div class="bg-blue-600 md:h-32 md:w-64 w-[22rem] h-52 md:-translate-y-12 rounded-3xl">
+								<div class="md:h-32 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/bogor.jpg" alt>
 								</div>
 							</div>
 							<div class="flex items-center justify-center">
-								<div class="bg-blue-600 md:h-52 md:w-52 w-[22rem] h-52 md:-translate-y-16 rounded-3xl">
+								<div class="md:h-52 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/bogor2.jpg" alt>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="w-full text-center">
+							<span class="text-lg">Depok</span>
+						</div>
+						<div class="flex flex-col gap-10 pt-4">
+							<div class="flex items-center">
+								<div class="md:h-44 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/depok.jpg" alt>
 								</div>
 							</div>
+							<div class="flex items-center">
+								<div class="md:h-44 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-cover object-top rounded-2xl w-full h-full" src="./assets/img/kopdar/depok2.jpg" alt>
+								</div>
+							</div>
 						</div>
 					</div>
 					<div class="item">
-						<div class="flex flex-col gap-10 pt-8">
+						<div class="w-full text-center">
+							<span class="text-lg">Jakarta Pusat</span>
+						</div>
+						<div class="flex flex-col gap-10 pt-4">
 							<div class="flex items-center">
-								<div class="bg-blue-600 md:h-52 md:w-80 w-[22rem] h-52 md:translate-y-3 rounded-3xl">
-									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/jogja.jpg" alt>
-								</div>
-							</div>
-							<div class="flex items-center">
-								<div class="bg-blue-600 md:h-32 md:w-64 w-[22rem] h-52 rounded-3xl">
+								<div class="md:h-32 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/jakpus.jpeg" alt>
 								</div>
 							</div>
-						</div>
-					</div>
-					<div class="item">
-						<div class="flex flex-col gap-10 pt-8">
 							<div class="flex items-center">
-								<div class="bg-blue-600 md:h-32 md:w-64 w-[22rem] h-52 rounded-3xl">
+								<div class="md:h-40 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/jakpus2.jpeg" alt>
 								</div>
 							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="w-full text-center">
+							<span class="text-lg">Gorontalo</span>
+						</div>
+						<div class="flex flex-col gap-10 pt-4">
 							<div class="flex items-center">
-								<div class="bg-blue-600 md:h-40 md:w-72 w-[22rem] h-52 rounded-3xl">
+								<div class="md:w-52 w-[22rem] md:h-full h-[26rem] rounded-3xl">
+									<img class="object-cover object-bottom rounded-2xl w-full h-full" src="./assets/img/kopdar/gorontalo.png" alt>
+								</div>
+							</div>
+						</div>
+					</div>
+					
+					<div class="item">
+						<div class="w-full text-center">
+							<span class="text-lg">Jakarta Barat</span>
+						</div>
+						<div class="flex flex-col gap-10 pt-4">
+							<div class="flex items-center">
+								<div class="md:w-full w-[22rem] md:h-36 h-52 rounded-3xl">
+									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/jabar.jpg" alt>
+								</div>
+							</div>
+							<div class="flex items-center">
+								<div class="md:w-full w-[22rem] md:h-36 h-52 rounded-3xl">
+									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/jabar2.jpg" alt>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="w-full text-center">
+							<span class="text-lg">Tangerang Selatan</span>
+						</div>
+						<div class="flex flex-col gap-10 pt-4">
+							<div class="flex items-center">
+								<div class="md:h-44 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-cover object-top rounded-2xl w-full h-full" src="./assets/img/kopdar/tangsel.jpeg" alt>
+								</div>
+							</div>
+							<div class="flex items-center justify-center">
+								<div class="md:h-52 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-cover object-bottom md:object-center rounded-2xl w-full h-full" src="./assets/img/kopdar/tangsel2.jpeg" alt>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="w-full text-center">
+							<span class="text-lg">Jawa Timur</span>
+						</div>
+						<div class="flex flex-col gap-10 pt-4">
+							<div class="flex items-center">
+								<div class="md:h-36 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/jatim.jpg" alt>
+								</div>
+							</div>
+							<div class="flex items-center justify-center">
+								<div class="md:h-36 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/jatim2.jpg" alt>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="w-full text-center">
+							<span class="text-lg">Kalimantan Barat</span>
+						</div>
+						<div class="flex flex-col gap-10 pt-4">
+							<div class="flex items-center">
+								<div class="md:h-52 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-cover object-bottom rounded-2xl w-full h-full" src="./assets/img/kopdar/kalbar.jpg" alt>
+								</div>
+							</div>
+							<div class="flex items-center">
+								<div class="md:h-32 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/kalbar2.jpg" alt>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="w-full text-center">
+							<span class="text-lg">Lampung</span>
+						</div>
+						<div class="flex flex-col gap-10 pt-4">
+							<div class="flex items-center">
+								<div class="md:h-44 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-cover object-bottom rounded-2xl w-full h-full" src="./assets/img/kopdar/lampung.jpeg" alt>
+								</div>
+							</div>
+							<div class="flex items-center">
+								<div class="md:h-44 md:w-full w-[22rem] h-52 rounded-3xl">
 									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/lampung.jpeg" alt>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="item">
-						<div class="flex flex-col gap-10 pt-8">
+						<div class="w-full text-center">
+							<span class="text-lg">Maluku</span>
+						</div>
+						<div class="flex flex-col gap-10 pt-4">
 							<div class="flex items-center">
-								<div class="bg-blue-600 md:h-32 md:w-64 w-[22rem] h-52 md:-translate-y-12 rounded-3xl">
-									<img class="object-cover object-center rounded-2xl w-full h-full" src="./assets/img/kopdar/sulut.jpg" alt>
+								<div class="md:w-52 w-[22rem] md:h-full h-[26rem] rounded-3xl">
+									<img class="object-cover object-bottom rounded-2xl w-full h-full" src="./assets/img/kopdar/maluku.jpg" alt>
 								</div>
 							</div>
-							<div class="flex items-center justify-center">
-								<div class="bg-blue-600 md:h-52 md:w-52 w-[22rem] h-52 md:-translate-y-16 rounded-3xl">
-									<img class="object-cover object-bottom md:object-center rounded-2xl w-full h-full" src="./assets/img/kopdar/sumsel.jpeg" alt>
+						</div>
+					</div>
+					
+					<div class="item">
+						<div class="w-full text-center">
+							<span class="text-lg">NTT & NTB</span>
+						</div>
+						<div class="flex flex-col gap-10 pt-4">
+							<div class="flex items-center">
+								<div class="md:h-44 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-cover object-bottom rounded-2xl w-full h-full" src="./assets/img/kopdar/ntt-ntb.jpg" alt>
+								</div>
+							</div>
+							<div class="flex items-center">
+								<div class="md:h-44 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/ntt-ntb.jpg" alt>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="item">
-						<div class="flex flex-col gap-10 pt-8">
+						<div class="w-full text-center">
+							<span class="text-lg">Maluku Utara</span>
+						</div>
+						<div class="flex flex-col gap-10 pt-4">
 							<div class="flex items-center">
-								<div class="bg-blue-600 md:h-52 md:w-80 w-[22rem] h-52 md:translate-y-3 rounded-3xl">
-									<img class="object-cover object-bottom rounded-2xl w-full h-full" src="./assets/img/kopdar/tangsel2.jpeg" alt>
-								</div>
-							</div>
-							<div class="flex items-center">
-								<div class="bg-blue-600 md:h-32 md:w-64 w-[22rem] h-52 rounded-3xl">
-									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/jabar.jpg" alt>
+								<div class="md:w-52 w-[22rem] md:h-full h-[26rem] rounded-3xl">
+									<img class="object-cover object-bottom rounded-2xl w-full h-full" src="./assets/img/kopdar/maluku-utara.jpeg" alt>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="item">
-						<div class="flex flex-col gap-10 pt-8">
+						<div class="w-full text-center">
+							<span class="text-lg">Semarang Raya</span>
+						</div>
+						<div class="flex flex-col gap-10 pt-4">
 							<div class="flex items-center">
-								<div class="bg-blue-600 md:h-32 md:w-64 w-[22rem] h-52 md:-translate-y-12 rounded-3xl">
-									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/kalbar.jpg" alt>
+								<div class="md:h-44 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-cover object-bottom rounded-2xl w-full h-full" src="./assets/img/kopdar/semarang-raya.jpg" alt>
 								</div>
 							</div>
-							<div class="flex items-center justify-center">
-								<div class="bg-blue-600 md:h-52 md:w-52 w-[22rem] h-52 md:-translate-y-16 rounded-3xl">
-									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/tangsel.jpeg" alt>
+							<div class="flex items-center">
+								<div class="md:h-44 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/semarang-raya2.jpg" alt>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="item">
-						<div class="flex flex-col gap-10 pt-8">
+						<div class="w-full text-center">
+							<span class="text-lg">Solo Raya</span>
+						</div>
+						<div class="flex flex-col gap-10 pt-4">
 							<div class="flex items-center">
-								<div class="bg-blue-600 md:h-52 md:w-80 w-[22rem] h-52 translate-y-3 rounded-3xl">
-									<img class="object-cover object-bottom rounded-2xl w-full h-full" src="./assets/img/kopdar/ntt.jpg" alt>
+								<div class="md:h-36 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/soloraya.jpg" alt>
 								</div>
 							</div>
 							<div class="flex items-center">
-								<div class="bg-blue-600 md:h-32 md:w-64 w-[22rem] h-52 rounded-3xl">
-									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/semarang-raya.jpg" alt>
+								<div class="md:h-56 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-cover object-center rounded-2xl w-full h-full" src="./assets/img/kopdar/soloraya2.jpg" alt>
 								</div>
 							</div>
 						</div>
 					</div>
+					<div class="item">
+						<div class="w-full text-center">
+							<span class="text-lg">Sulawesi Selatan</span>
+						</div>
+						<div class="flex flex-col gap-10 pt-4">
+							<div class="flex items-center">
+								<div class="md:w-64 w-[22rem] md:h-full h-[28rem] rounded-3xl">
+									<img class="object-cover object-bottom rounded-2xl w-full h-full" src="./assets/img/kopdar/sulsel.jpg" alt>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="w-full text-center">
+							<span class="text-lg">Sulawesi Utara</span>
+						</div>
+						<div class="flex flex-col gap-10 pt-4">
+							<div class="flex items-center">
+								<div class="md:h-36 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/sulut.jpg" alt>
+								</div>
+							</div>
+							<div class="flex items-center">
+								<div class="md:h-56 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-cover object-center rounded-2xl w-full h-full" src="./assets/img/kopdar/sulut2.jpg" alt>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="w-full text-center">
+							<span class="text-lg">Sumatera Selatan</span>
+						</div>
+						<div class="flex flex-col gap-10 pt-4">
+							<div class="flex items-center">
+								<div class="md:h-44 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/sumsel.jpeg" alt>
+								</div>
+							</div>
+							<div class="flex items-center">
+								<div class="md:h-56 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-contain object-center rounded-2xl w-full h-full" src="./assets/img/kopdar/sumsel2.jpeg" alt>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="w-full text-center">
+							<span class="text-lg">Sumatera Utara</span>
+						</div>
+						<div class="flex flex-col gap-10 pt-4">
+							<div class="flex items-center">
+								<div class="md:h-32 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/sumut.png" alt>
+								</div>
+							</div>
+							<div class="flex items-center">
+								<div class="md:h-56 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/sumut2.jpeg" alt>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="w-full text-center">
+							<span class="text-lg">Yogyakarta</span>
+						</div>
+						<div class="flex flex-col gap-10 pt-4">
+							<div class="flex items-center">
+								<div class="md:h-44 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/jogja.jpg" alt>
+								</div>
+							</div>
+							<div class="flex items-center">
+								<div class="md:h-48 md:w-full w-[22rem] h-52 rounded-3xl">
+									<img class="object-cover rounded-2xl w-full h-full" src="./assets/img/kopdar/jogja2.jpg" alt>
+								</div>
+							</div>
+						</div>
+					</div>
+
 
 				</div>
 			</div>
