--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 						<h3
 							class="md:w-[45%] text-shadow-hero-lg text-[#30608F] text-5xl font-semibold md:font-extrabold md:mb-1 lg:mb-2 md:text-7xl lg:text-7xl">
 							NYALA MIMPI INDONESIA, <br>
-							PANCARMU TERANGI DUNIA
+							PANCARMU <span class="bg-orange-600 text-white">TERANGI DUNIA</span>
 							<img class="h-8 lg:h-12 inline-block" src="./assets/img/wave-icon.png" alt>
 						</h3>
 						<img class="w-3/4 md:w-1/2 absolute -right-10 lg:-right-0 -bottom-5 lg:-bottom-20 animate-wave"
