--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <body>
 	<!-- LOAD ANIMATION START -->
-	<!-- <div class="start-animation-bg fixed z-[100] h-full w-full bg-neutral-50">
+	<div class="start-animation-bg fixed z-[100] h-full w-full bg-neutral-50">
 		<div class="proudly-present-container flex h-full w-full items-center opacity-0 relative">
 
 			<div
@@ -94,11 +94,11 @@
 			</div>
 		</div>
 	</div>
-	<div class="light-bg fixed z-[75] h-full w-full bg-white transition-all duration-300"></div> -->
+	<div class="light-bg fixed z-[75] h-full w-full bg-white transition-all duration-300"></div>
 	<!-- LOAD ANIMATION END -->
 
 
-	<header id="main-header" class="absolute w-full p-5 md:p-0 z-40">
+	<header id="main-header" class="absolute w-full p-5 md:p-0 z-[999999]">
 		<div class="w-full md:w-5/6 mx-auto flex justify-between items-center">
 			<!-- Logo -->
 			<div>
@@ -112,15 +112,14 @@
 				<span class="block h-[2px] w-full bg-primary-dark transition-all duration-300"></span>
 			</button>
 
-			<div id="navbar"
-				class="absolute hidden gap-4 bg-white shadow-md drop-shadow-md backdrop-blur-md bg-opacity-50 md:bg-opacity-100 py-4 w-full left-0 items-center flex-col md:backdrop-blur-none md:static md:shadow-none md:drop-shadow-none top-20 md:w-auto md:flex md:bg-transparent md:flex-row md:top-auto md:left-auto md:gap-4 text-primary-dark font-semibold">
-				<a class="hover:text-primary" href="#home">Beranda</a>
-				<a class="hover:text-primary" href="#logo">Logo</a>
-				<a class="hover:text-primary" href="#representatives">Perwakilan</a>
-				<a class="hover:text-primary" href="#demographics">Demografi</a>
-				<a class="hover:text-primary" href="#member">Anggota</a>
-				<a class="hover:text-primary" href="#gallery">Galeri</a>
-				<a class="hover:text-primary" href="#booklet">Booklet</a>
+			<div id="navbar" class="absolute hidden bg-white shadow-md drop-shadow-md backdrop-blur-md bg-opacity-50 md:bg-opacity-100 py-4 w-full left-0 items-center flex-col md:backdrop-blur-none md:static md:shadow-none md:drop-shadow-none top-20 md:w-auto md:flex md:bg-transparent md:flex-row md:top-auto md:left-auto md:gap-4 text-primary-dark font-semibold">
+				<a class="hover:text-primary link-nav block w-full text-center py-2" href="#home">Beranda</a>
+				<a class="hover:text-primary link-nav block w-full text-center py-2" href="#logo">Logo</a>
+				<a class="hover:text-primary link-nav block w-full text-center py-2" href="#representatives">Perwakilan</a>
+				<a class="hover:text-primary link-nav block w-full text-center py-2" href="#demographics">Demografi</a>
+				<a class="hover:text-primary link-nav block w-full text-center py-2" href="#member">Anggota</a>
+				<a class="hover:text-primary link-nav block w-full text-center py-2" href="#gallery">Galeri</a>
+				<a class="hover:text-primary link-nav block w-full text-center py-2" href="#booklet">Booklet</a>
 			</div>
 
 			<div class="hidden md:flex gap-6 items-center">
@@ -153,7 +152,7 @@
 		</section>
 		<section id="logo" class="mb-16 lg:mb-32">
 			<div class="bg-cover bg-[url('/assets/img/sea.jpg')] bg-bottom text-transparent p-0 [background-clip:text]">
-				<h2 class="text-3xl lg:text-8xl text-center pt-8 lg:pt-28 lg:pb-8 font-bold uppercase">SEASCAPED
+				<h2 class="text-3xl lg:text-8xl text-center pt-28 lg:pb-8 font-bold uppercase">SEASCAPED
 					PHILOSOPHY</h2>
 			</div>
 			<div class="flex flex-col lg:flex-row lg:w-10/12 mx-auto lg:pt-12">
@@ -205,11 +204,12 @@
 		<section id="representatives" class="h-screen">
 			<div class="relative h-full w-full">
 				<div class="absolute h-full w-full -z-10 overflow-hidden">
-					<img class="absolute w-full z-50 left-40 blur-lg" src="./assets/img/shark.png" alt>
+					<svg class="absolute z-50 hidden md:inline-block md:-mt-8" id="visual" viewBox="0 0 1920 540" width="1920" height="540" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"><path d="M0 79L21.3 80.7C42.7 82.3 85.3 85.7 128 91.2C170.7 96.7 213.3 104.3 256 94.7C298.7 85 341.3 58 384 57C426.7 56 469.3 81 512 89.3C554.7 97.7 597.3 89.3 640 83.7C682.7 78 725.3 75 768 81C810.7 87 853.3 102 896 101.8C938.7 101.7 981.3 86.3 1024 85.7C1066.7 85 1109.3 99 1152 99.5C1194.7 100 1237.3 87 1280 81C1322.7 75 1365.3 76 1408 78.7C1450.7 81.3 1493.3 85.7 1536 95.7C1578.7 105.7 1621.3 121.3 1664 122.3C1706.7 123.3 1749.3 109.7 1792 106C1834.7 102.3 1877.3 108.7 1898.7 111.8L1920 115L1920 0L1898.7 0C1877.3 0 1834.7 0 1792 0C1749.3 0 1706.7 0 1664 0C1621.3 0 1578.7 0 1536 0C1493.3 0 1450.7 0 1408 0C1365.3 0 1322.7 0 1280 0C1237.3 0 1194.7 0 1152 0C1109.3 0 1066.7 0 1024 0C981.3 0 938.7 0 896 0C853.3 0 810.7 0 768 0C725.3 0 682.7 0 640 0C597.3 0 554.7 0 512 0C469.3 0 426.7 0 384 0C341.3 0 298.7 0 256 0C213.3 0 170.7 0 128 0C85.3 0 42.7 0 21.3 0L0 0Z" fill="#ffffff" stroke-linecap="round" stroke-linejoin="miter"></path></svg>
+					<img class="absolute w-full z-40 left-40 blur-lg" src="./assets/img/shark.png" alt>
 					<img class="object-cover h-full w-full brightness-[.35]" src="./assets/img/deepsea.jpg" alt>
 				</div>
 				<div class="p-0 text-white">
-					<h2 class="text-3xl lg:text-8xl text-center py-12 md:pt-28 font-bold uppercase">Meet the
+					<h2 class="text-3xl lg:text-8xl text-center py-12 pt-28 font-bold uppercase">Meet the
 						Sailor</h2>
 				</div>
 				<div class="w-full h-full flex items-center -translate-y-32 relative lg:w-8/12 mx-auto">
@@ -256,7 +256,7 @@
 		</section>
 
 		<section id="demographics">
-			<div class="w-full -mt-1 pb-12 bg-gradient-to-b from-[#00171e] to-black">
+			<div class="w-full relative -mt-1 pb-12 bg-gradient-to-b from-[#00171e] to-black">
 				<div class=" h-full w-full absolute -z-10"></div>
 				<div class="p-0 text-white pt-32">
 					<h2 class="text-3xl lg:text-8xl text-center pb-2  lg:pb-4 font-bold glow uppercase">Treasure Map
@@ -272,8 +272,8 @@
 						knowledge.
 					</p>
 				</div>
-				<div id="demografi" class="w-full"></div>
-				<div class="flex flex-col md:flex-row items-center mt-16 md:mt-32 gap-8 md:gap-0">
+				<div id="demografi" class="w-full relative z-40"></div>
+				<div class="relative z-40 flex flex-col md:flex-row items-center mt-16 md:mt-32 gap-8 md:gap-0">
 					<div class="w-10/12 md:w-1/2 flex flex-col items-center">
 						<h3 class="text-white font-bold mb-8 text-2xl text-center">Jenis Kelamin</h3>
 						<div id="gender" class=""></div>
@@ -288,7 +288,7 @@
 
 		<section id="member" class="lg:pb-32 relative overflow-hidden pt-10">
 			<div class="bg-cover bg-[url('/assets/img/sea.jpg')] bg-bottom text-transparent p-0 [background-clip:text]">
-				<h2 class="text-3xl lg:text-8xl text-center pt-8 lg:pt-16 lg:pb-8 font-bold uppercase">
+				<h2 class="text-3xl lg:text-8xl text-center pt-16 lg:pb-8 font-bold uppercase">
 					THE IMPRESIVE CREW
 				</h2>
 			</div>
@@ -322,7 +322,7 @@
 				</div>
 				<div class="hover:text-primary-light">
 					<a class="flex flex-col items-center crew-button" href="#groupSix">
-						<span class="font-semibold">Sampar</span>
+						<span class="font-semibold">Sampari</span>
 					</a>
 				</div>
 			</div>
@@ -372,7 +372,7 @@
 
 		<section id="gallery" class="pb-24 lg:pb-44 relative pt-10">
 			<div class="bg-cover bg-[url('/assets/img/sea.jpg')] bg-bottom text-transparent p-0 [background-clip:text]">
-				<h2 class="text-3xl lg:text-8xl text-center pt-8 lg:pt-16 lg:pb-8 font-bold uppercase">
+				<h2 class="text-3xl lg:text-8xl text-center pt-16 lg:pb-8 font-bold uppercase">
 					COMMUNITY GATHERING
 				</h2>
 			</div>
@@ -754,7 +754,7 @@
 		</div>
 		<div class=" h-full w-full">
 			<div class="p-0 text-white">
-				<h2 class="text-3xl lg:text-8xl text-center pt-8 lg:pt-16 lg:pb-16 font-bold uppercase">Overview</h2>
+				<h2 class="text-3xl lg:text-8xl text-center pt-16 lg:pb-16 font-bold uppercase">Overview</h2>
 			</div>
 
 			<div class="">
@@ -797,17 +797,29 @@
 			}
 		});
 
+		document.addEventListener('DOMContentLoaded', function () {
+			const navs = document.querySelectorAll('.link-nav');
+
+			navs.forEach(nav => {
+				nav.addEventListener('click', function () {
+					// Hapus kelas aktif dari semua link
+					navbar.classList.remove('flex');
+					navbar.classList.add('hidden');
+				});
+			});
+		});
+
 
 		window.addEventListener('scroll', function () {
 			var header = document.getElementById('main-header');
 			if (window.scrollY > 0) {
 				header.classList.remove('absolute');
 				header.classList.add('sticky');
-				header.classList.add('md:shadow-md')
+				header.classList.add('shadow-md')
 			} else {
 				header.classList.remove('sticky');
 				header.classList.add('absolute');
-				header.classList.remove('md:shadow-md')
+				header.classList.remove('shadow-md')
 			}
 		});
 
@@ -1053,7 +1065,7 @@
 					fontWeight: 'bold'
 				}
 			},
-			labels: ['Magister Dalam Negeri', 'Doktor Dalam Negeri', 'Magister Luar Negeri', 'Doktor Luar Negeri', 'Spesialis Dalam Negeri'],
+			labels: ['Magister DN', 'Doktor DN', 'Magister LN', 'Doktor LN', 'Spesialis DN'],
 			legend: {
 				show: false,
 				labels: {
