feat: footer section

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <body>
 	<!-- LOAD ANIMATION START -->
-	<div class="start-animation-bg fixed z-[99999] h-full w-full bg-neutral-50">
+	<!-- <div class="start-animation-bg fixed z-[99999] h-full w-full bg-neutral-50">
 		<div class="proudly-present-container flex h-full w-full items-center opacity-0 relative">
 
 			<div
@@ -94,7 +94,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="light-bg fixed z-[75] h-full w-full bg-white transition-all duration-300"></div>
+	<div class="light-bg fixed z-[75] h-full w-full bg-white transition-all duration-300"></div> -->
 	<!-- LOAD ANIMATION END -->
 
 
@@ -112,10 +112,12 @@
 				<span class="block h-[2px] w-full bg-primary-dark transition-all duration-300"></span>
 			</button>
 
-			<div id="navbar" class="absolute hidden bg-white shadow-md drop-shadow-md backdrop-blur-md bg-opacity-50 md:bg-opacity-100 py-4 w-full left-0 items-center flex-col md:backdrop-blur-none md:static md:shadow-none md:drop-shadow-none top-20 md:w-auto md:flex md:bg-transparent md:flex-row md:top-auto md:left-auto md:gap-4 text-primary-dark font-semibold">
+			<div id="navbar"
+				class="absolute hidden bg-white shadow-md drop-shadow-md backdrop-blur-md bg-opacity-50 md:bg-opacity-100 py-4 w-full left-0 items-center flex-col md:backdrop-blur-none md:static md:shadow-none md:drop-shadow-none top-20 md:w-auto md:flex md:bg-transparent md:flex-row md:top-auto md:left-auto md:gap-4 text-primary-dark font-semibold">
 				<a class="hover:text-primary link-nav block w-full text-center py-2" href="#home">Beranda</a>
 				<a class="hover:text-primary link-nav block w-full text-center py-2" href="#logo">Logo</a>
-				<a class="hover:text-primary link-nav block w-full text-center py-2" href="#representatives">Perwakilan</a>
+				<a class="hover:text-primary link-nav block w-full text-center py-2"
+					href="#representatives">Perwakilan</a>
 				<a class="hover:text-primary link-nav block w-full text-center py-2" href="#demographics">Demografi</a>
 				<a class="hover:text-primary link-nav block w-full text-center py-2" href="#member">Anggota</a>
 				<a class="hover:text-primary link-nav block w-full text-center py-2" href="#gallery">Galeri</a>
@@ -204,7 +206,13 @@
 		<section id="representatives" class="h-screen">
 			<div class="relative h-full w-full">
 				<div class="absolute h-full w-full -z-10 overflow-hidden">
-					<svg class="absolute z-50 hidden md:inline-block md:-mt-8" id="visual" viewBox="0 0 1920 540" width="1920" height="540" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"><path d="M0 79L21.3 80.7C42.7 82.3 85.3 85.7 128 91.2C170.7 96.7 213.3 104.3 256 94.7C298.7 85 341.3 58 384 57C426.7 56 469.3 81 512 89.3C554.7 97.7 597.3 89.3 640 83.7C682.7 78 725.3 75 768 81C810.7 87 853.3 102 896 101.8C938.7 101.7 981.3 86.3 1024 85.7C1066.7 85 1109.3 99 1152 99.5C1194.7 100 1237.3 87 1280 81C1322.7 75 1365.3 76 1408 78.7C1450.7 81.3 1493.3 85.7 1536 95.7C1578.7 105.7 1621.3 121.3 1664 122.3C1706.7 123.3 1749.3 109.7 1792 106C1834.7 102.3 1877.3 108.7 1898.7 111.8L1920 115L1920 0L1898.7 0C1877.3 0 1834.7 0 1792 0C1749.3 0 1706.7 0 1664 0C1621.3 0 1578.7 0 1536 0C1493.3 0 1450.7 0 1408 0C1365.3 0 1322.7 0 1280 0C1237.3 0 1194.7 0 1152 0C1109.3 0 1066.7 0 1024 0C981.3 0 938.7 0 896 0C853.3 0 810.7 0 768 0C725.3 0 682.7 0 640 0C597.3 0 554.7 0 512 0C469.3 0 426.7 0 384 0C341.3 0 298.7 0 256 0C213.3 0 170.7 0 128 0C85.3 0 42.7 0 21.3 0L0 0Z" fill="#ffffff" stroke-linecap="round" stroke-linejoin="miter"></path></svg>
+					<svg class="absolute z-50 hidden md:inline-block md:-mt-8" id="visual" viewBox="0 0 1920 540"
+						width="1920" height="540" xmlns="http://www.w3.org/2000/svg"
+						xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
+						<path
+							d="M0 79L21.3 80.7C42.7 82.3 85.3 85.7 128 91.2C170.7 96.7 213.3 104.3 256 94.7C298.7 85 341.3 58 384 57C426.7 56 469.3 81 512 89.3C554.7 97.7 597.3 89.3 640 83.7C682.7 78 725.3 75 768 81C810.7 87 853.3 102 896 101.8C938.7 101.7 981.3 86.3 1024 85.7C1066.7 85 1109.3 99 1152 99.5C1194.7 100 1237.3 87 1280 81C1322.7 75 1365.3 76 1408 78.7C1450.7 81.3 1493.3 85.7 1536 95.7C1578.7 105.7 1621.3 121.3 1664 122.3C1706.7 123.3 1749.3 109.7 1792 106C1834.7 102.3 1877.3 108.7 1898.7 111.8L1920 115L1920 0L1898.7 0C1877.3 0 1834.7 0 1792 0C1749.3 0 1706.7 0 1664 0C1621.3 0 1578.7 0 1536 0C1493.3 0 1450.7 0 1408 0C1365.3 0 1322.7 0 1280 0C1237.3 0 1194.7 0 1152 0C1109.3 0 1066.7 0 1024 0C981.3 0 938.7 0 896 0C853.3 0 810.7 0 768 0C725.3 0 682.7 0 640 0C597.3 0 554.7 0 512 0C469.3 0 426.7 0 384 0C341.3 0 298.7 0 256 0C213.3 0 170.7 0 128 0C85.3 0 42.7 0 21.3 0L0 0Z"
+							fill="#ffffff" stroke-linecap="round" stroke-linejoin="miter"></path>
+					</svg>
 					<img class="absolute w-full z-40 left-40 blur-lg" src="./assets/img/shark.png" alt>
 					<img class="object-cover h-full w-full brightness-[.35]" src="./assets/img/deepsea.jpg" alt>
 				</div>
@@ -776,7 +784,37 @@
 		</div>
 	</section>
 
-	<footer class="text-center p-4 bg-black text-slate-100">Copyright &copy Angkatan PK-237 LPDP</footer>
+	<footer class="bg-white border-t-4 border-white">
+		<div class="flex flex-col gap-12 md:gap-0 md:flex-row w-full md:w-10/12 mx-auto items-center py-4">
+			<div class="w-full md:w-3/12 flex justify-center">
+				<img src="./assets/maskot/citra-lakshya_2.webp" alt="" class="md:w-10/12 w-5/12">
+			</div>
+	
+			<div class="w-full md:w-6/12 text-center text-primary-dark flex flex-col gap-4 px-2 md:px-0">
+				<div class="text-2xl font-bold">PK237 LPDP</div>
+				<div class="font-bold text-sm md:text-base">Nyala Mimpi Indonesia, Pancarmu <span class="glow-sm">Terangi Dunia</span></div>
+				<div class="text-sm md:text-base">Copyright &copy Angkatan PK-237 LPDP</div>
+			</div>
+	
+			<div class="w-full md:w-3/12 flex flex-col items-center gap-4 mb-28 md:mb-0">
+				<span class="text-primary-dark font-semibold text-lg md:text-xl">Kontak Kami</span>
+				<div class="flex gap-6">
+					<a target="_blank" href="https://www.linkedin.com/company/lembaga-pengelola-dana-pendidikan/">
+						<img class="h-7 md:h-10" src="./assets/flaticon/linkedin.svg" alt="">
+					</a>
+					<a target="_blank" href="https://www.instagram.com/pk237.lpdp/">
+						<img class="h-7 md:h-10" src="./assets/flaticon/instagram.svg" alt="">
+					</a>
+					<a target="_blank" href="https://www.facebook.com/LPDPKemenkeu">
+						<img class="h-7 md:h-10" src="./assets/flaticon/facebook.svg" alt="">
+					</a>
+					<a target="_blank" href="https://lpdp.kemenkeu.go.id/">
+						<img class="h-7 md:h-10" src="./assets/flaticon/internet.svg" alt="">
+					</a>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 	<script src="./assets/js/data.js"></script>
 
