--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <body>
 	<!-- LOAD ANIMATION START -->
-	<!-- <div class="start-animation-bg fixed z-[99999] h-full w-full bg-neutral-50">
+	<div class="start-animation-bg fixed z-[99999] h-full w-full bg-neutral-50">
 		<div class="proudly-present-container flex h-full w-full items-center opacity-0 relative">
 
 			<div
@@ -94,7 +94,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="light-bg fixed z-[75] h-full w-full bg-white transition-all duration-300"></div> -->
+	<div class="light-bg fixed z-[75] h-full w-full bg-white transition-all duration-300"></div>
 	<!-- LOAD ANIMATION END -->
 
 
@@ -204,15 +204,10 @@
 			</div>
 		</section>
 		<section id="representatives" class="h-screen">
-			<div class="relative h-full w-full">
+			<div class="relative h-full w-full -mt-1">
 				<div class="absolute h-full w-full -z-10 overflow-hidden">
-					<svg class="absolute z-50 hidden md:inline-block md:-mt-8" id="visual" viewBox="0 0 1920 540"
-						width="1920" height="540" xmlns="http://www.w3.org/2000/svg"
-						xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
-						<path
-							d="M0 79L21.3 80.7C42.7 82.3 85.3 85.7 128 91.2C170.7 96.7 213.3 104.3 256 94.7C298.7 85 341.3 58 384 57C426.7 56 469.3 81 512 89.3C554.7 97.7 597.3 89.3 640 83.7C682.7 78 725.3 75 768 81C810.7 87 853.3 102 896 101.8C938.7 101.7 981.3 86.3 1024 85.7C1066.7 85 1109.3 99 1152 99.5C1194.7 100 1237.3 87 1280 81C1322.7 75 1365.3 76 1408 78.7C1450.7 81.3 1493.3 85.7 1536 95.7C1578.7 105.7 1621.3 121.3 1664 122.3C1706.7 123.3 1749.3 109.7 1792 106C1834.7 102.3 1877.3 108.7 1898.7 111.8L1920 115L1920 0L1898.7 0C1877.3 0 1834.7 0 1792 0C1749.3 0 1706.7 0 1664 0C1621.3 0 1578.7 0 1536 0C1493.3 0 1450.7 0 1408 0C1365.3 0 1322.7 0 1280 0C1237.3 0 1194.7 0 1152 0C1109.3 0 1066.7 0 1024 0C981.3 0 938.7 0 896 0C853.3 0 810.7 0 768 0C725.3 0 682.7 0 640 0C597.3 0 554.7 0 512 0C469.3 0 426.7 0 384 0C341.3 0 298.7 0 256 0C213.3 0 170.7 0 128 0C85.3 0 42.7 0 21.3 0L0 0Z"
-							fill="#ffffff" stroke-linecap="round" stroke-linejoin="miter"></path>
-					</svg>
+					<svg class="absolute z-50 md:hidden" id="visual" viewBox="0 0 540 960" width="540" height="960" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"><path d="M0 40L7 42.2C14 44.3 28 48.7 41.8 48.8C55.7 49 69.3 45 83.2 41.7C97 38.3 111 35.7 124.8 38.5C138.7 41.3 152.3 49.7 166.2 53.8C180 58 194 58 207.8 54.2C221.7 50.3 235.3 42.7 249.2 39C263 35.3 277 35.7 290.8 40.5C304.7 45.3 318.3 54.7 332.2 55.3C346 56 360 48 373.8 44.2C387.7 40.3 401.3 40.7 415.2 39.3C429 38 443 35 456.8 36C470.7 37 484.3 42 498.2 41.7C512 41.3 526 35.7 533 32.8L540 30L540 0L533 0C526 0 512 0 498.2 0C484.3 0 470.7 0 456.8 0C443 0 429 0 415.2 0C401.3 0 387.7 0 373.8 0C360 0 346 0 332.2 0C318.3 0 304.7 0 290.8 0C277 0 263 0 249.2 0C235.3 0 221.7 0 207.8 0C194 0 180 0 166.2 0C152.3 0 138.7 0 124.8 0C111 0 97 0 83.2 0C69.3 0 55.7 0 41.8 0C28 0 14 0 7 0L0 0Z" fill="#fff" stroke-linecap="round" stroke-linejoin="miter"></path></svg>
+					<svg class="absolute z-50 hidden md:inline-block md:-mt-8" id="visual" viewBox="0 0 1920 540" width="1920" height="540" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"> <path d="M0 79L21.3 80.7C42.7 82.3 85.3 85.7 128 91.2C170.7 96.7 213.3 104.3 256 94.7C298.7 85 341.3 58 384 57C426.7 56 469.3 81 512 89.3C554.7 97.7 597.3 89.3 640 83.7C682.7 78 725.3 75 768 81C810.7 87 853.3 102 896 101.8C938.7 101.7 981.3 86.3 1024 85.7C1066.7 85 1109.3 99 1152 99.5C1194.7 100 1237.3 87 1280 81C1322.7 75 1365.3 76 1408 78.7C1450.7 81.3 1493.3 85.7 1536 95.7C1578.7 105.7 1621.3 121.3 1664 122.3C1706.7 123.3 1749.3 109.7 1792 106C1834.7 102.3 1877.3 108.7 1898.7 111.8L1920 115L1920 0L1898.7 0C1877.3 0 1834.7 0 1792 0C1749.3 0 1706.7 0 1664 0C1621.3 0 1578.7 0 1536 0C1493.3 0 1450.7 0 1408 0C1365.3 0 1322.7 0 1280 0C1237.3 0 1194.7 0 1152 0C1109.3 0 1066.7 0 1024 0C981.3 0 938.7 0 896 0C853.3 0 810.7 0 768 0C725.3 0 682.7 0 640 0C597.3 0 554.7 0 512 0C469.3 0 426.7 0 384 0C341.3 0 298.7 0 256 0C213.3 0 170.7 0 128 0C85.3 0 42.7 0 21.3 0L0 0Z" fill="#ffffff" stroke-linecap="round" stroke-linejoin="miter"></path> </svg>
 					<img class="absolute w-full z-40 left-40 blur-lg" src="./assets/img/shark.png" alt>
 					<img class="object-cover h-full w-full brightness-[.35]" src="./assets/img/deepsea.jpg" alt>
 				</div>
@@ -293,6 +288,11 @@
 				</div>
 			</div>
 		</section>
+
+		<div class="relative h-20 bg-red-500 w-full -mt-2 -z-10 overflow-hidden">
+			<svg class="relative z-50 md:hidden" id="visual" viewBox="0 0 540 960" width="540" height="960" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"><path d="M0 40L7 42.2C14 44.3 28 48.7 41.8 48.8C55.7 49 69.3 45 83.2 41.7C97 38.3 111 35.7 124.8 38.5C138.7 41.3 152.3 49.7 166.2 53.8C180 58 194 58 207.8 54.2C221.7 50.3 235.3 42.7 249.2 39C263 35.3 277 35.7 290.8 40.5C304.7 45.3 318.3 54.7 332.2 55.3C346 56 360 48 373.8 44.2C387.7 40.3 401.3 40.7 415.2 39.3C429 38 443 35 456.8 36C470.7 37 484.3 42 498.2 41.7C512 41.3 526 35.7 533 32.8L540 30L540 0L533 0C526 0 512 0 498.2 0C484.3 0 470.7 0 456.8 0C443 0 429 0 415.2 0C401.3 0 387.7 0 373.8 0C360 0 346 0 332.2 0C318.3 0 304.7 0 290.8 0C277 0 263 0 249.2 0C235.3 0 221.7 0 207.8 0C194 0 180 0 166.2 0C152.3 0 138.7 0 124.8 0C111 0 97 0 83.2 0C69.3 0 55.7 0 41.8 0C28 0 14 0 7 0L0 0Z" fill="#000" stroke-linecap="round" stroke-linejoin="miter"></path></svg>
+			<svg class="relative z-50 hidden md:inline-block md:-mt-8" id="visual" viewBox="0 0 1920 540" width="1920" height="540" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"> <path d="M0 79L21.3 80.7C42.7 82.3 85.3 85.7 128 91.2C170.7 96.7 213.3 104.3 256 94.7C298.7 85 341.3 58 384 57C426.7 56 469.3 81 512 89.3C554.7 97.7 597.3 89.3 640 83.7C682.7 78 725.3 75 768 81C810.7 87 853.3 102 896 101.8C938.7 101.7 981.3 86.3 1024 85.7C1066.7 85 1109.3 99 1152 99.5C1194.7 100 1237.3 87 1280 81C1322.7 75 1365.3 76 1408 78.7C1450.7 81.3 1493.3 85.7 1536 95.7C1578.7 105.7 1621.3 121.3 1664 122.3C1706.7 123.3 1749.3 109.7 1792 106C1834.7 102.3 1877.3 108.7 1898.7 111.8L1920 115L1920 0L1898.7 0C1877.3 0 1834.7 0 1792 0C1749.3 0 1706.7 0 1664 0C1621.3 0 1578.7 0 1536 0C1493.3 0 1450.7 0 1408 0C1365.3 0 1322.7 0 1280 0C1237.3 0 1194.7 0 1152 0C1109.3 0 1066.7 0 1024 0C981.3 0 938.7 0 896 0C853.3 0 810.7 0 768 0C725.3 0 682.7 0 640 0C597.3 0 554.7 0 512 0C469.3 0 426.7 0 384 0C341.3 0 298.7 0 256 0C213.3 0 170.7 0 128 0C85.3 0 42.7 0 21.3 0L0 0Z" fill="#000" stroke-linecap="round" stroke-linejoin="miter"></path> </svg>
+		</div>
 
 		<section id="member" class="lg:pb-32 relative overflow-hidden pt-10">
 			<div class="bg-cover bg-[url('/assets/img/sea.jpg')] bg-bottom text-transparent p-0 [background-clip:text]">
